@@ -6,15 +6,16 @@
 #endif
 
 #include <fs/glib.h>
+#include <fs/log.h>
 
 static inline char *fs_utf8_to_latin1(const char *src, int len)
 {
-    return g_convert(src, len, "UTF-8", "ISO-8859-1", NULL, NULL, NULL);
+    return g_convert(src, len, "ISO-8859-1", "UTF-8", NULL, NULL, NULL);
 }
 
 static inline char *fs_utf8_from_latin1(const char *src, int len)
 {
-    return g_convert(src, len, "ISO-8859-1", "UTF-8", NULL, NULL, NULL);
+    return g_convert(src, len, "UTF-8", "ISO-8859-1", NULL, NULL, NULL);
 }
 
 static inline int fs_path_exists(const char *path)
