@@ -1,5 +1,7 @@
 Version 2.5.17dev:
 
+* Fixed cyberstormppc.rom lookup when using FS-UAE config file.
+* Fixed ISO-8859-1 <-> UTF-8 conversion (broke in 2.5.15dev).
 * Updated emulation core from WinUAE 2900b17.
 
 Version 2.5.16dev:
